--- a/example/unity/DemoApp/Assembly-CSharp.csproj
+++ b/example/unity/DemoApp/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Camera\BackgroundControl.cs" />
      <Compile Include="Assets\CarTransforms\OpenDriverFrontDoor.cs" />
      <Compile Include="Assets\Rotate.cs" />
      <Compile Include="Assets\UnityMessageManager.cs" />
