--- a/example/unity/DemoApp/Assembly-CSharp.csproj
+++ b/example/unity/DemoApp/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
      <Compile Include="Assets\Camera\BackgroundControl.cs" />
      <Compile Include="Assets\CarTransforms\OpenDriverFrontDoor.cs" />
+     <Compile Include="Assets\Init.cs" />
      <Compile Include="Assets\Rotate.cs" />
      <Compile Include="Assets\UnityMessageManager.cs" />
      <None Include="Assets\materials\mirror.shader" />
