--- a/example/unity/DemoApp/Assembly-CSharp.csproj
+++ b/example/unity/DemoApp/Assembly-CSharp.csproj
@@ -58,6 +58,20 @@
      <Compile Include="Assets\Camera\BackgroundControl.cs" />
      <Compile Include="Assets\CarTransforms\OpenDriverFrontDoor.cs" />
      <Compile Include="Assets\Init.cs" />
+     <Compile Include="Assets\PivotModder\Scripts\Non-EditorScripts\CollRecognize.cs" />
+     <Compile Include="Assets\PivotModder\Scripts\Non-EditorScripts\DataContainer.cs" />
+     <Compile Include="Assets\PivotModder\Scripts\Non-EditorScripts\EditorCoroutineExtensions.cs" />
+     <Compile Include="Assets\PivotModder\Scripts\Non-EditorScripts\EditorCoroutines.cs" />
+     <Compile Include="Assets\PivotModder\Scripts\Non-EditorScripts\HandleControlsUtility.cs" />
+     <Compile Include="Assets\PivotModder\Scripts\Non-EditorScripts\NavObsRecognize.cs" />
+     <Compile Include="Assets\PivotModder\Scripts\Non-EditorScripts\PivotManager.cs" />
+     <Compile Include="Assets\PivotModder\Scripts\Non-EditorScripts\PivotModderHost.cs" />
+     <Compile Include="Assets\PivotModder\Scripts\Non-EditorScripts\PrivateValueAccessor.cs" />
+     <Compile Include="Assets\PivotModder\Scripts\Non-EditorScripts\SerializableDictionary.cs" />
+     <Compile Include="Assets\PivotModder\Scripts\Non-EditorScripts\TransformExtensions.cs" />
+     <Compile Include="Assets\PivotModder\Scripts\Non-EditorScripts\UtilityServices.cs" />
+     <Compile Include="Assets\PivotModder\Scripts\Runtime\PivotModderRuntime.cs" />
+     <Compile Include="Assets\PivotModder\Scripts\Runtime\UtilityServicesRuntime.cs" />
      <Compile Include="Assets\Rotate.cs" />
      <Compile Include="Assets\UnityMessageManager.cs" />
      <None Include="Assets\materials\mirror.shader" />
